Fix dropdown z-index

--- a/static/sass/_pattern_global-nav.scss
+++ b/static/sass/_pattern_global-nav.scss
@@ -28,7 +28,7 @@ $nav-bg-color: lighten($global-nav-bg-color, $contrast-ratio);
     background: $global-nav-bg-color;
     display: flex;
     position: relative;
-    z-index: 10;
+    z-index: 11;
 
     @media (max-width: $breakpoint-navigation-threshold - 1) {
       position: absolute;
